Project1/parser.output
State 0 conflicts: 4 shift/reduce
State 7 conflicts: 4 shift/reduce, 1 reduce/reduce
State 10 conflicts: 3 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: Decl DeclList
    3         | Decl

    4 Decl: VarDecl
    5     | StmtList

    6 VarDecl: TYPE ID SEMICOLON

    7 StmtList: %empty
    8         | Stmt StmtList

    9 Stmt: SEMICOLON
   10     | Expr1 SEMICOLON
   11     | Expr2 SEMICOLON
   12     | Expr3 SEMICOLON
   13     | Expr4 SEMICOLON
   14     | Expr5 SEMICOLON
   15     | Expr6 SEMICOLON
   16     | Expr7 SEMICOLON

   17 Expr1: ID SEMICOLON
   18      | ID EQ ID SEMICOLON
   19      | ID EQ NUMBER SEMICOLON

   20 Expr2: ID ADD_OPR ID SEMICOLON
   21      | ID EQ ID ADD_OPR ID SEMICOLON

   22 Expr3: ID SUB_OPR ID SEMICOLON
   23      | ID EQ ID SUB_OPR ID SEMICOLON

   24 Expr4: ID MULTI_OPR ID SEMICOLON
   25      | ID EQ ID MULTI_OPR ID SEMICOLON

   26 Expr5: ID DIV_OPR ID SEMICOLON
   27      | ID EQ ID DIV_OPR ID SEMICOLON

   28 Expr6: ID MOD_OPR ID SEMICOLON
   29      | ID EQ ID MOD_OPR ID SEMICOLON

   30 Expr7: WRITE ID SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TYPE <string> (258) 6
    ID <string> (259) 6 17 18 19 20 21 22 23 24 25 26 27 28 29 30
    NUMBER <number> (260) 19
    SEMICOLON <char> (261) 6 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
    EQ <char> (262) 18 19 21 23 25 27 29
    ADD_OPR <char> (263) 20 21
    MULTI_OPR <char> (264) 24 25
    DIV_OPR <char> (265) 26 27
    SUB_OPR <char> (266) 22 23
    MOD_OPR <char> (267) 28 29
    WRITE (268) 30


Nonterminals, with rules where they appear

    $accept (14)
        on left: 0
    Program (15)
        on left: 1
        on right: 0
    DeclList (16)
        on left: 2 3
        on right: 1 2
    Decl (17)
        on left: 4 5
        on right: 2 3
    VarDecl (18)
        on left: 6
        on right: 4
    StmtList (19)
        on left: 7 8
        on right: 5 8
    Stmt (20)
        on left: 9 10 11 12 13 14 15 16
        on right: 8
    Expr1 (21)
        on left: 17 18 19
        on right: 10
    Expr2 (22)
        on left: 20 21
        on right: 11
    Expr3 (23)
        on left: 22 23
        on right: 12
    Expr4 (24)
        on left: 24 25
        on right: 13
    Expr5 (25)
        on left: 26 27
        on right: 14
    Expr6 (26)
        on left: 28 29
        on right: 15
    Expr7 (27)
        on left: 30
        on right: 16


State 0

    0 $accept: . Program $end

    TYPE       shift, and go to state 1
    ID         shift, and go to state 2
    SEMICOLON  shift, and go to state 3
    WRITE      shift, and go to state 4

    TYPE       [reduce using rule 7 (StmtList)]
    ID         [reduce using rule 7 (StmtList)]
    SEMICOLON  [reduce using rule 7 (StmtList)]
    WRITE      [reduce using rule 7 (StmtList)]
    $default   reduce using rule 7 (StmtList)

    Program   go to state 5
    DeclList  go to state 6
    Decl      go to state 7
    VarDecl   go to state 8
    StmtList  go to state 9
    Stmt      go to state 10
    Expr1     go to state 11
    Expr2     go to state 12
    Expr3     go to state 13
    Expr4     go to state 14
    Expr5     go to state 15
    Expr6     go to state 16
    Expr7     go to state 17


State 1

    6 VarDecl: TYPE . ID SEMICOLON

    ID  shift, and go to state 18


State 2

   17 Expr1: ID . SEMICOLON
   18      | ID . EQ ID SEMICOLON
   19      | ID . EQ NUMBER SEMICOLON
   20 Expr2: ID . ADD_OPR ID SEMICOLON
   21      | ID . EQ ID ADD_OPR ID SEMICOLON
   22 Expr3: ID . SUB_OPR ID SEMICOLON
   23      | ID . EQ ID SUB_OPR ID SEMICOLON
   24 Expr4: ID . MULTI_OPR ID SEMICOLON
   25      | ID . EQ ID MULTI_OPR ID SEMICOLON
   26 Expr5: ID . DIV_OPR ID SEMICOLON
   27      | ID . EQ ID DIV_OPR ID SEMICOLON
   28 Expr6: ID . MOD_OPR ID SEMICOLON
   29      | ID . EQ ID MOD_OPR ID SEMICOLON

    SEMICOLON  shift, and go to state 19
    EQ         shift, and go to state 20
    ADD_OPR    shift, and go to state 21
    MULTI_OPR  shift, and go to state 22
    DIV_OPR    shift, and go to state 23
    SUB_OPR    shift, and go to state 24
    MOD_OPR    shift, and go to state 25


State 3

    9 Stmt: SEMICOLON .

    $default  reduce using rule 9 (Stmt)


State 4

   30 Expr7: WRITE . ID SEMICOLON

    ID  shift, and go to state 26


State 5

    0 $accept: Program . $end

    $end  shift, and go to state 27


State 6

    1 Program: DeclList .

    $default  reduce using rule 1 (Program)


State 7

    2 DeclList: Decl . DeclList
    3         | Decl .

    TYPE       shift, and go to state 1
    ID         shift, and go to state 2
    SEMICOLON  shift, and go to state 3
    WRITE      shift, and go to state 4

    $end       reduce using rule 3 (DeclList)
    $end       [reduce using rule 7 (StmtList)]
    TYPE       [reduce using rule 7 (StmtList)]
    ID         [reduce using rule 7 (StmtList)]
    SEMICOLON  [reduce using rule 7 (StmtList)]
    WRITE      [reduce using rule 7 (StmtList)]
    $default   reduce using rule 3 (DeclList)

    DeclList  go to state 28
    Decl      go to state 7
    VarDecl   go to state 8
    StmtList  go to state 9
    Stmt      go to state 10
    Expr1     go to state 11
    Expr2     go to state 12
    Expr3     go to state 13
    Expr4     go to state 14
    Expr5     go to state 15
    Expr6     go to state 16
    Expr7     go to state 17


State 8

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


State 9

    5 Decl: StmtList .

    $default  reduce using rule 5 (Decl)


State 10

    8 StmtList: Stmt . StmtList

    ID         shift, and go to state 2
    SEMICOLON  shift, and go to state 3
    WRITE      shift, and go to state 4

    ID         [reduce using rule 7 (StmtList)]
    SEMICOLON  [reduce using rule 7 (StmtList)]
    WRITE      [reduce using rule 7 (StmtList)]
    $default   reduce using rule 7 (StmtList)

    StmtList  go to state 29
    Stmt      go to state 10
    Expr1     go to state 11
    Expr2     go to state 12
    Expr3     go to state 13
    Expr4     go to state 14
    Expr5     go to state 15
    Expr6     go to state 16
    Expr7     go to state 17


State 11

   10 Stmt: Expr1 . SEMICOLON

    SEMICOLON  shift, and go to state 30


State 12

   11 Stmt: Expr2 . SEMICOLON

    SEMICOLON  shift, and go to state 31


State 13

   12 Stmt: Expr3 . SEMICOLON

    SEMICOLON  shift, and go to state 32


State 14

   13 Stmt: Expr4 . SEMICOLON

    SEMICOLON  shift, and go to state 33


State 15

   14 Stmt: Expr5 . SEMICOLON

    SEMICOLON  shift, and go to state 34


State 16

   15 Stmt: Expr6 . SEMICOLON

    SEMICOLON  shift, and go to state 35


State 17

   16 Stmt: Expr7 . SEMICOLON

    SEMICOLON  shift, and go to state 36


State 18

    6 VarDecl: TYPE ID . SEMICOLON

    SEMICOLON  shift, and go to state 37


State 19

   17 Expr1: ID SEMICOLON .

    $default  reduce using rule 17 (Expr1)


State 20

   18 Expr1: ID EQ . ID SEMICOLON
   19      | ID EQ . NUMBER SEMICOLON
   21 Expr2: ID EQ . ID ADD_OPR ID SEMICOLON
   23 Expr3: ID EQ . ID SUB_OPR ID SEMICOLON
   25 Expr4: ID EQ . ID MULTI_OPR ID SEMICOLON
   27 Expr5: ID EQ . ID DIV_OPR ID SEMICOLON
   29 Expr6: ID EQ . ID MOD_OPR ID SEMICOLON

    ID      shift, and go to state 38
    NUMBER  shift, and go to state 39


State 21

   20 Expr2: ID ADD_OPR . ID SEMICOLON

    ID  shift, and go to state 40


State 22

   24 Expr4: ID MULTI_OPR . ID SEMICOLON

    ID  shift, and go to state 41


State 23

   26 Expr5: ID DIV_OPR . ID SEMICOLON

    ID  shift, and go to state 42


State 24

   22 Expr3: ID SUB_OPR . ID SEMICOLON

    ID  shift, and go to state 43


State 25

   28 Expr6: ID MOD_OPR . ID SEMICOLON

    ID  shift, and go to state 44


State 26

   30 Expr7: WRITE ID . SEMICOLON

    SEMICOLON  shift, and go to state 45


State 27

    0 $accept: Program $end .

    $default  accept


State 28

    2 DeclList: Decl DeclList .

    $default  reduce using rule 2 (DeclList)


State 29

    8 StmtList: Stmt StmtList .

    $default  reduce using rule 8 (StmtList)


State 30

   10 Stmt: Expr1 SEMICOLON .

    $default  reduce using rule 10 (Stmt)


State 31

   11 Stmt: Expr2 SEMICOLON .

    $default  reduce using rule 11 (Stmt)


State 32

   12 Stmt: Expr3 SEMICOLON .

    $default  reduce using rule 12 (Stmt)


State 33

   13 Stmt: Expr4 SEMICOLON .

    $default  reduce using rule 13 (Stmt)


State 34

   14 Stmt: Expr5 SEMICOLON .

    $default  reduce using rule 14 (Stmt)


State 35

   15 Stmt: Expr6 SEMICOLON .

    $default  reduce using rule 15 (Stmt)


State 36

   16 Stmt: Expr7 SEMICOLON .

    $default  reduce using rule 16 (Stmt)


State 37

    6 VarDecl: TYPE ID SEMICOLON .

    $default  reduce using rule 6 (VarDecl)


State 38

   18 Expr1: ID EQ ID . SEMICOLON
   21 Expr2: ID EQ ID . ADD_OPR ID SEMICOLON
   23 Expr3: ID EQ ID . SUB_OPR ID SEMICOLON
   25 Expr4: ID EQ ID . MULTI_OPR ID SEMICOLON
   27 Expr5: ID EQ ID . DIV_OPR ID SEMICOLON
   29 Expr6: ID EQ ID . MOD_OPR ID SEMICOLON

    SEMICOLON  shift, and go to state 46
    ADD_OPR    shift, and go to state 47
    MULTI_OPR  shift, and go to state 48
    DIV_OPR    shift, and go to state 49
    SUB_OPR    shift, and go to state 50
    MOD_OPR    shift, and go to state 51


State 39

   19 Expr1: ID EQ NUMBER . SEMICOLON

    SEMICOLON  shift, and go to state 52


State 40

   20 Expr2: ID ADD_OPR ID . SEMICOLON

    SEMICOLON  shift, and go to state 53


State 41

   24 Expr4: ID MULTI_OPR ID . SEMICOLON

    SEMICOLON  shift, and go to state 54


State 42

   26 Expr5: ID DIV_OPR ID . SEMICOLON

    SEMICOLON  shift, and go to state 55


State 43

   22 Expr3: ID SUB_OPR ID . SEMICOLON

    SEMICOLON  shift, and go to state 56


State 44

   28 Expr6: ID MOD_OPR ID . SEMICOLON

    SEMICOLON  shift, and go to state 57


State 45

   30 Expr7: WRITE ID SEMICOLON .

    $default  reduce using rule 30 (Expr7)


State 46

   18 Expr1: ID EQ ID SEMICOLON .

    $default  reduce using rule 18 (Expr1)


State 47

   21 Expr2: ID EQ ID ADD_OPR . ID SEMICOLON

    ID  shift, and go to state 58


State 48

   25 Expr4: ID EQ ID MULTI_OPR . ID SEMICOLON

    ID  shift, and go to state 59


State 49

   27 Expr5: ID EQ ID DIV_OPR . ID SEMICOLON

    ID  shift, and go to state 60


State 50

   23 Expr3: ID EQ ID SUB_OPR . ID SEMICOLON

    ID  shift, and go to state 61


State 51

   29 Expr6: ID EQ ID MOD_OPR . ID SEMICOLON

    ID  shift, and go to state 62


State 52

   19 Expr1: ID EQ NUMBER SEMICOLON .

    $default  reduce using rule 19 (Expr1)


State 53

   20 Expr2: ID ADD_OPR ID SEMICOLON .

    $default  reduce using rule 20 (Expr2)


State 54

   24 Expr4: ID MULTI_OPR ID SEMICOLON .

    $default  reduce using rule 24 (Expr4)


State 55

   26 Expr5: ID DIV_OPR ID SEMICOLON .

    $default  reduce using rule 26 (Expr5)


State 56

   22 Expr3: ID SUB_OPR ID SEMICOLON .

    $default  reduce using rule 22 (Expr3)


State 57

   28 Expr6: ID MOD_OPR ID SEMICOLON .

    $default  reduce using rule 28 (Expr6)


State 58

   21 Expr2: ID EQ ID ADD_OPR ID . SEMICOLON

    SEMICOLON  shift, and go to state 63


State 59

   25 Expr4: ID EQ ID MULTI_OPR ID . SEMICOLON

    SEMICOLON  shift, and go to state 64


State 60

   27 Expr5: ID EQ ID DIV_OPR ID . SEMICOLON

    SEMICOLON  shift, and go to state 65


State 61

   23 Expr3: ID EQ ID SUB_OPR ID . SEMICOLON

    SEMICOLON  shift, and go to state 66


State 62

   29 Expr6: ID EQ ID MOD_OPR ID . SEMICOLON

    SEMICOLON  shift, and go to state 67


State 63

   21 Expr2: ID EQ ID ADD_OPR ID SEMICOLON .

    $default  reduce using rule 21 (Expr2)


State 64

   25 Expr4: ID EQ ID MULTI_OPR ID SEMICOLON .

    $default  reduce using rule 25 (Expr4)


State 65

   27 Expr5: ID EQ ID DIV_OPR ID SEMICOLON .

    $default  reduce using rule 27 (Expr5)


State 66

   23 Expr3: ID EQ ID SUB_OPR ID SEMICOLON .

    $default  reduce using rule 23 (Expr3)


State 67

   29 Expr6: ID EQ ID MOD_OPR ID SEMICOLON .

    $default  reduce using rule 29 (Expr6)
